--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign-up Page</title>
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +12,9 @@
     <div class="logo-container">
       <img src="odin-lined.png" alt="Odin logo">
       <h1 class="title">ODIN</h1>
+    </div>
+    <div class="pic-credit">
+      <p>Photo by <a href="">Halie West</a> on <a href="">Unsplash</a></p>
     </div>
   </div>
   <div class="right-section">
